直播结束的功能

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorGray">#b3b3b3</color>
     <color name="colorShallowGray">#d4d3d3</color>
+    <color name="colorDeepGray2">#878787</color>
     <color name="colorWall">#f8f6f6</color>
     <color name="colorClicked">#F0F0F0</color>
     <color name="colorDeepGray">#807f7f</color>
@@ -12,6 +13,7 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorWhite2">#d4d1d1</color>
     <color name="colorShallowBlack">#7e7979</color><!-- 浅黑 -->
+    <color name="colorShallowBlack2">#5a5656</color><!-- 浅黑 -->
     <color name="colorlittleBlack">#202020</color>
     <color name="colorShallowBlue">#589ed7</color><!-- 浅蓝 -->
     <color name="colorBlue">#1874CD</color><!-- 深蓝 -->
