--- a/app/src/main/res/layout/item_black_list.xml
+++ b/app/src/main/res/layout/item_black_list.xml
@@ -21,6 +21,7 @@
             android:textSize="16sp" />
 
         <Button
+            android:id="@+id/btn_black_list_relieve"
             android:background="@drawable/selector_green_corners_button"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
