--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -43,7 +43,7 @@
             android:id="@+id/btn_play_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_backgroud"
+            android:background="@drawable/selector_icon"
             android:padding="5dp"
             android:scaleType="center"
             app:materialIcon="comment_text_outline"
@@ -56,7 +56,7 @@
             android:id="@+id/btn_play_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/round_backgroud"
+            android:background="@drawable/selector_icon"
             android:padding="5dp"
             android:scaleType="center"
             app:materialIcon="close"
