--- a/app/src/main/res/layout/activity_live_over.xml
+++ b/app/src/main/res/layout/activity_live_over.xml
@@ -22,7 +22,7 @@
         android:layout_below="@id/tv_live_over_hint"
         android:layout_marginTop="20dp"
         android:scaleType="fitXY"
-        android:src="@drawable/bg" />
+        android:src="" />
 
         <TextView
             android:id="@+id/tv_live_over_nickname"
@@ -31,8 +31,8 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@id/iv_live_over_headImg"
             android:layout_marginTop="15dp"
-            android:text="许二狗傻子"
-            android:textSize="20sp"
+            android:text=""
+            android:textSize="18sp"
             android:textColor="@color/colorShallowGray"
             />
 
@@ -48,14 +48,14 @@
                 android:layout_height="wrap_content"
                 android:text="ID: "
                 android:textColor="@color/colorShallowGray"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
             <TextView
                 android:id="@+id/tv_live_over_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="201335020231"
+                android:text=""
                 android:textColor="@color/colorShallowGray"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
     <LinearLayout
@@ -70,14 +70,14 @@
             android:layout_height="wrap_content"
             android:text="关注："
             android:textColor="@color/colorShallowGray"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
         <TextView
             android:id="@+id/tv_live_over_attentionCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="10"
+            android:text=""
             android:textColor="@color/colorShallowGray"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <ImageView
@@ -95,10 +95,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/im_live_over_line"
-        android:padding="18dp"
-        android:textSize="18sp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:paddingLeft="35dp"
+        android:paddingRight="35dp"
+        android:textSize="15sp"
         android:textColor="@color/colorShallowGray"
-        android:text="签名：我是的撒电费卡世纪东方萨科技地方撒旦富士康等级发送到防守打法 "/>
+        android:text="签名："/>
 
     <ImageView
         android:id="@+id/im_live_over_line2"
@@ -113,16 +116,16 @@
     <Button
         android:id="@+id/btn_live_over_return"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/tv_live_over_description"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="40dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:background="@drawable/shape_live_over_btn"
         android:text="返 回"
         android:textColor="@color/colorWhite2"
-        android:textSize="20sp"
+        android:textSize="15sp"
         />
 
 
