--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,78 +10,32 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.live.module.demo.MainActivity">
 
-    <LinearLayout
-        android:id="@+id/ll_global_url"
+    <EditText
+        android:id="@+id/tv_main_inputRtmp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:hint="rtmp地址"
+        android:text="rtmp://119.29.167.148/live/"
+        />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="测试链接：" />
-
-        <EditText
-            android:id="@+id/et_demo_url"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_edittext"
-            android:hint="如：192.168.1.1/live/stream01" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_global_url_type"
+    <EditText
+        android:id="@+id/tv_main_inputRoomNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ll_global_url"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_below="@id/tv_main_inputRtmp"
+        android:layout_marginTop="15dp"
+        android:hint="房间号"
+        android:text="201335020246"
+        />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="链接前缀：" />
-
-        <RadioGroup
-            android:id="@+id/rg_prefix"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/textView1"
-            android:layout_below="@+id/textView1"
-            android:orientation="horizontal">
-
-            <RadioButton
-                android:id="@+id/rb_rtmp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="rtmp" />
-
-            <RadioButton
-                android:id="@+id/rb_http"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="http" />
-
-            <RadioButton
-                android:id="@+id/rb_ws"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="ws" />
-        </RadioGroup>
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/lv_demo"
+    <Button
+        android:id="@+id/btn_main_play"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ll_global_url_type"
-        android:divider="@color/colorGray"
-        android:dividerHeight="1dp"
-        android:fadeScrollbars="true" />
+        android:layout_below="@id/tv_main_inputRoomNum"
+        android:layout_marginTop="20dp"
+        android:text="播放"
+        />
+
 
 </RelativeLayout>
